@@ -9,3 +9,5 @@ wholewords=Paraules senceres
 regexp=Expressió regular
 noSubstitutionsTitle=No hi ha substitucions
 noSubstitutionsDescription=Heu de definir com a mínim una substitució.
+xmlErrorTitle=Error a l'XML
+xmlErrorText=S'han produït un o més errors processant un grup de substitució des d'XML. A continuació teniu la llista d'errors:
