@@ -9,3 +9,5 @@ wholewords=Whole words
 regexp=Regular expression
 noSubstitutionsTitle=No substitutions
 noSubstitutionsDescription=You must define at least one substitution.
+xmlErrorTitle=Error in XML
+xmlErrorText=One or more errors have ocurred while processing a substitution group from XML. Below there is the error list:
